...
                          children: [
                            Text(
                              tv.name,
                              style: kHeading5,
                            ),
                            ElevatedButton(
															key: const Key('watchlist_button'),
                              onPressed: () async {
                                if (!isAddedWatchlist) {
                                  await context.read<TVDetailCubit>().addWatchlist(tv);
                                } else {
                                  await context.read<TVDetailCubit>().removeFromWatchlist(tv.id);
                                }
...
